package maidsafe.vault.proto;
option optimize_for = LITE_RUNTIME;

enum kPersonaType {
  MaidAccoutHolder = 0;
  MetaDataManager = 1;
  PmidAccountHolder = 2;
  DataHolder = 3;
}

enum kActionType {
  Get = 0;
  Put = 1;
  Post = 2;
  Delete = 3;
}

enum kDataType {
  ImmutableData = 0;
  MutableData = 1;
  SignatureData = 2;
}

message Nfs {
  required kActionType action_type = 0;
  required kPersonaType persona_type = 1;
  required kDataType data_type = 2;
  required bytes destination = 3;
  required bytes source = 4;
  required bytes content = 5;
  optional bytes signature = 6;
}
